# doc-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CLAUDE.md  Dockerfile.api  Dockerfile.autoscaler  Dockerfile.inference-server  Dockerfile.worker  Dockerfile.worker-docid  Dockerfile.worker-ocr  README.md  REFACTOR_PLAN.md  api.py  benchmark.py  cli.py  docker-compose.yml  entrypoint-worker.sh  inference_server.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements-ocr.txt  requirements-worker.txt  requirements.txt  start-server.sh  stop-server.sh  worker.py  worker_docid.py  worker_ocr.py
doc_pipeline/: __init__.py  auth.py  config.py  pipeline.py  schemas.py
doc_pipeline/classifier/: __init__.py  adapter.py  classificar.py
doc_pipeline/extractors/: __init__.py  base.py  easyocr.py  got_ocr.py  hybrid.py  qwen_vl.py  vllm_client.py  vllm_embedded.py  vlm_utils.py
doc_pipeline/observability/: __init__.py  logging.py  metrics.py  worker_metrics.py
doc_pipeline/ocr/: __init__.py  converter.py  engine.py
doc_pipeline/preprocessing/: __init__.py  orientation.py
doc_pipeline/prompts/: __init__.py  cin.py  cnh.py  rg.py
doc_pipeline/shared/: __init__.py  constants.py  delivery.py  inference_client.py  job_context.py  queue.py
doc_pipeline/utils/: __init__.py  cpf.py
docs/: API_FLOW.md  DEPENDENCIA_DOC_CLASSIFIER.md
docs/postmortems/: ghost-worker-2026-02-08.md
grafana/provisioning/alerting/: worker-docid-alerts.yaml  worker-ocr-alerts.yaml
grafana/provisioning/dashboards/: dashboards.yml
monitoring/: README.md
monitoring/grafana/alerts/: doc-pipeline-alerts.yaml
monitoring/grafana/dashboards/: doc-pipeline.json
monitoring/prometheus/: prometheus.yml
monitoring/scripts/: create-alerts.sh  create-dashboards.sh
pids/: api.pid
scripts/: autoscale.sh  bench.py  doc-pipeline-autoscaler.service  ocr_load_test.py
static/: index.html
(+3 files in other folders)
